// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ViewSelector 1`] = `
<DocumentFragment>
  <a
    class="btn btn-default btn-xs"
    href="#"
  >
    <span>
      <svg
        aria-hidden="true"
        class="lucide lucide-files icon icon-files"
        fill="none"
        height="16"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="16"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M15 2h-4a2 2 0 0 0-2 2v11a2 2 0 0 0 2 2h8a2 2 0 0 0 2-2V8"
        />
        <path
          d="M16.706 2.706A2.4 2.4 0 0 0 15 2v5a1 1 0 0 0 1 1h5a2.4 2.4 0 0 0-.706-1.706z"
        />
        <path
          d="M5 7a2 2 0 0 0-2 2v11a2 2 0 0 0 2 2h8a2 2 0 0 0 1.732-1"
        />
      </svg>
       
      <b>
        View:
      </b>
       auto 
      <span
        class="caret"
      />
    </span>
  </a>
</DocumentFragment>
`;

exports[`ViewSelector 2`] = `
<DocumentFragment>
  <a
    class="btn btn-default btn-xs open is-open"
    href="#"
  >
    <span>
      <svg
        aria-hidden="true"
        class="lucide lucide-files icon icon-files"
        fill="none"
        height="16"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="16"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M15 2h-4a2 2 0 0 0-2 2v11a2 2 0 0 0 2 2h8a2 2 0 0 0 2-2V8"
        />
        <path
          d="M16.706 2.706A2.4 2.4 0 0 0 15 2v5a1 1 0 0 0 1 1h5a2.4 2.4 0 0 0-.706-1.706z"
        />
        <path
          d="M5 7a2 2 0 0 0-2 2v11a2 2 0 0 0 2 2h8a2 2 0 0 0 1.732-1"
        />
      </svg>
       
      <b>
        View:
      </b>
       auto 
      <span
        class="caret"
      />
    </span>
  </a>
  <ul
    class="dropdown-menu is-open"
    style="position: absolute; left: 0px; top: 0px; transform: translate(0px, 0px);"
  >
    <li>
      <a
        href="#"
      >
        auto
      </a>
    </li>
    <li>
      <a
        href="#"
      >
        raw
      </a>
    </li>
  </ul>
</DocumentFragment>
`;
